--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,9 @@
     </properties>
 
 
-    <dependencies>
-    </dependencies>
+    <scm>
+        <developerConnection>scm:git:https://github.com/karnnivore/pet-clinic-wednesday.git</developerConnection>
+    </scm>
 
     <build>
         <plugins>
@@ -33,7 +34,16 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <goals>install</goals>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
+
 
 </project>
