--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,22 @@
 #release configuration
-#Sun Oct 04 22:10:53 EDT 2020
+#Sun Oct 04 22:38:51 EDT 2020
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=true
-completedPhase=check-poms
+project.dev.ca.gbc\:pet-clinic-data=0.0.2-SNAPSHOT
+project.scm.ca.gbc\:pet-clinic-wednesday.tag=HEAD
+completedPhase=end-release
 scm.url=scm\:git\:https\://github.com/karnnivore/pet-clinic-wednesday.git
+project.scm.ca.gbc\:pet-clinic-wednesday.developerConnection=scm\:git\:https\://github.com/karnnivore/pet-clinic-wednesday.git
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+pushChanges=true
+project.rel.ca.gbc\:pet-clinic-data=0.0.1
+project.rel.ca.gbc\:pet-clinic-web=0.0.1
+project.scm.ca.gbc\:pet-clinic-data.empty=true
+scm.tag=pet-clinic-wednesday-0.0.1
 exec.snapshotReleasePluginAllowed=false
+project.rel.ca.gbc\:pet-clinic-wednesday=0.0.1
+project.dev.ca.gbc\:pet-clinic-wednesday=0.0.2-SNAPSHOT
+project.scm.ca.gbc\:pet-clinic-web.empty=true
 preparationGoals=clean verify
+project.dev.ca.gbc\:pet-clinic-web=0.0.2-SNAPSHOT
