--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>pet-clinic-wednesday</artifactId>
         <groupId>ca.gbc</groupId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>ca.gbc</groupId>
             <artifactId>pet-clinic-data</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
+            <version>0.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
