--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>ca.gbc</groupId>
     <artifactId>pet-clinic-wednesday</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.2</version>
     <name>pet-clinic-wednesday</name>
     <description>Pet Clinic App Java Web</description>
 
@@ -25,7 +25,7 @@
 
     <scm>
         <developerConnection>scm:git:https://github.com/karnnivore/pet-clinic-wednesday.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>pet-clinic-wednesday-0.0.2</tag>
   </scm>
 
     <build>
