Implement WROJ Maven Plugin and Spring Pet Clinic resources

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>ca.gbc.PetClinicWednesdayApplication</mainClass>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
